GarminDataSource service will receive messages from watch app, and send a broadcast with the message.

--- a/PhoneApp/app/src/main/res/layout/activity_main.xml
+++ b/PhoneApp/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context="uk.org.openseizuredetector.garmindatasource.MainActivity">
 
     <TextView
+        android:id="@+id/textview1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Hello World!"
@@ -14,5 +15,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ToggleButton
+        android:id="@+id/toggleButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ToggleButton"
+        tools:layout_editor_absoluteX="160dp"
+        tools:layout_editor_absoluteY="287dp" />
 
 </android.support.constraint.ConstraintLayout>
